Bug 1598575 - Make nsNotifyAddrListener check the local group policy for DNS suffixes r=kershaw

Bug 1597683, added support for setting the DNS suffix list via "Advanced TCP/IP Settings". The changes performed in "Advanced TCP/IP Settings" reflect inside the `Computer\HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters` registry key.

However, when setting the Local Group Policy for DNS Suffixes via gpedit, the registry key that gets modified is `Computer\HKEY_LOCAL_MACHINE\SOFTWARE\Policies\Microsoft\Windows NT\DNSClient`
Note: the setting in gpedit can be found at Computer Configuration > Administrative Templates > Network > DNS Client > DNS suffix search list

This patch first checks for the Local Group Policy registry key, and if not found it checks the one that gets set by the Advanced TCP/IP Settings window.

Differential Revision: https://phabricator.services.mozilla.com/D56344